# md2std-standard-auditor

./: .gitignore  LICENSE  README.md  pyproject.toml
md2std_standard_auditor/: __init__.py  __main__.py  auditor.py  cli.py  normative_refs.py
tests/: test_auditor.py
